Fixed full img z-index position

--- a/styles/pages/img-posts.css
+++ b/styles/pages/img-posts.css
@@ -69,6 +69,7 @@
     height: 100%;
     top: 0;
     left: 0;
+    z-index: 80;
   }
 
 .full-img-div .full-img {
